# resonantsoul

./: .gitignore  PROJECT_GUIDE.md  README.md
resontsoul/: .gitignore  Dockerfile  PROJECT_INTRO.md  app.py  pyproject.toml  requirements.txt
resontsoul/api/: __init__.py  constants.py  settings.py
resontsoul/api/apps/: admin_app.py  conversation_app.py  emotion_app.py  relaxation_app.py  sas_app.py  statistics_app.py  user_app.py
resontsoul/api/db/: __init__.py  db_models.py  init_data.py
resontsoul/api/db/services/: assessment_service.py  conversation_service.py  emotion_service.py  relaxation_service.py  user_service.py
resontsoul/api/utils/: __init__.py  file_utils.py  log_utils.py  t_crypt.py
resontsoul/conf/: public.pem  service_conf.yaml
resontsoul/docker/: entrypoint.sh
resontsoul/static/: custom.css
resontsoul/test/: test_emotion_app.py  test_sas_app.py  test_user_service.py
